--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "description": "Set up automatic replies to Tweets matching given conditions easily!",
   "version": "1.0.0",
   "scripts": {
-    "build": "./node_modules/.bin/ts-node build.ts",
+    "build": "ts-node build.ts",
     "lint": "eslint . --ext .ts",
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "nodemon",
     "test": "nodemon --config ./spec/nodemon.json",
-    "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec"
+    "test:no-reloading": "ts-node -r tsconfig-paths/register ./spec"
   },
   "repository": {
     "type": "git",
@@ -55,7 +55,8 @@
         {
           "code": 100
         }
-      ]
+      ],
+      "@typescript-eslint/no-floating-promises": "warn"
     }
   },
   "eslintIgnore": [
@@ -70,6 +71,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
+    "module-alias": "^2.2.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -91,6 +93,7 @@
     "nodemon": "^2.0.14",
     "supertest": "^6.1.6",
     "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
   }
 }
