--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,6 +14,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install
+      - name: Lint
+        run: npm run lint
+      - name: Build
+        run: npm run build
       - name: Run tests
         run: npm run test:no-reloading
   release:
