--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "ts-node build.ts",
     "lint": "eslint . --ext .ts",
-    "start": "node -r module-alias/register ./dist --env=production",
+    "start": "node ./dist --env=production",
     "dev": "nodemon",
     "test": "ts-node -r tsconfig-paths/register ./spec",
     "test:dev": "nodemon --config ./spec/nodemon.json"
@@ -30,11 +30,7 @@
     "ignore": [
       "src/public"
     ],
-    "exec": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./src"
-  },
-  "_moduleAliases": {
-    "@shared": "dist/shared",
-    "@server": "dist/Server"
+    "exec": "./node_modules/.bin/ts-node ./src"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -71,7 +67,6 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
-    "module-alias": "^2.2.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
